# 2025_Chat_Application

./: .gitignore  Makefile  README.md  chat_app  main.cpp
ChatGPT_chatapp/: CMakeLists.txt  Documentation.txt  QnA.txt  README.md
ChatGPT_chatapp/include/: Client.hpp  Server.hpp  SocketWrapper.hpp
ChatGPT_chatapp/include/common/: Protocol.hpp
ChatGPT_chatapp/src/: Client.cpp  Server.cpp  main_client.cpp  main_server.cpp
NEW_chatapp/: QnA.txt
NEW_chatapp/include/: Server.hpp  SocketWrapper.hpp
NEW_chatapp/include/common/: Protocol.hpp
NEW_chatapp/src/: Server.cpp
NEW_chatapp/src/common/: Protocol.cpp
inc/: MasterPeer.hpp  Peer.hpp  app_api.hpp  defines.hpp  utils.hpp
src/: MasterPeer.cpp  Peer.cpp  app_api.cpp  utils.cpp
